# market_analysis

./: .gitignore  Avaliação MCP.txt  GUIA_DE_USO.md  INVENTORY.md  MANUAL_USUARIO.md  ORCHESTRATION.md  README.md  RELATORIO_TECNICO.md  _test_consolidation.py  alert_manager.py  alerts.py  api.py  app.py  backtester.py  best_params_Ibovespa.txt  config.py  dashboard.py  data_provider.py  indicators.py  labels.py  meta_labeler.py  metrics.py  optimizer.py  paper_trader.py  price_action.py  pyproject.toml  requirements.txt  run.py  sentiment_analyzer.py  strategy.py  stress_test.py  walkforward_honest.py
.claude/: settings.local.json
_deprecated/: advanced_strategy.py  analyzer.py  analyzer_new.py  debug_analyzer.py  debug_run.py  enhanced_strategy.py  final_analyzer.py  final_backtester.py  final_optimizer.py  final_run.py  fixed_backtester.py  fixed_integrated_backtester.py  improved_analyzer.py  improved_run.py  integrated_backtester.py  main_optimizer.py  market_analyzer.py  market_strategy.py  minimal_optimizer.py  price_action_fixed.py  robust_optimizer.py  run_analyzer.py  run_new.py  simple_optimizer.py  standalone_backtester.py  strategy_optimizer.py  test_backtest.py  test_basic.py  test_data.py  test_imports.py  test_output.txt  test_redirect.py  test_yahoo.py  teste.py
data/: __init__.py  cache.py  providers.py  schema.py
docs/sprint_plans/: sprint_18_plan.md  sprint_19_plan.md  sprint_20_plan.md  sprint_21_plan.md  sprint_22_plan.md
findings/: MARCO_BLOCO_I.md  sprint_18_mdd_dual.md  sprint_19_cost_sensitivity.md  sprint_20_factor_decomp.md  sprint_21_walkforward_honest.md  sprint_22_bears_complete.md
findings/sprint_18_data/: bears_dual_mdd.csv
findings/sprint_19_data/: breakeven_summary.csv  sweep_bvsp.csv  sweep_petr4.csv  sweep_vale3.csv
findings/sprint_20_data/: decomposition_summary.csv  model1_capm_bvsp_is.json  model1_capm_bvsp_oos.json  model2_momentum_bvsp_is.json  model2_momentum_bvsp_oos.json  model3_minimal_bvsp_is.json  model3_minimal_bvsp_oos.json
findings/sprint_21_data/: compare_bvsp.json  compare_gspc.json  compare_vale3.json  walkforward_comparison.csv
findings/sprint_22_data/: bears_complete.csv
market_analysis_package/: CLAUDE.md  README.md  pyproject.toml
market_analysis_package/db/: __init__.py  schema.sql
market_analysis_package/docs/decisions/: ADR-001-web-local.md  ADR-002-sqlite-backend.md  ADR-003-audit-chain.md
market_analysis_package/findings/: MARCO_BLOCO_I.md  sprint_18_mdd_dual.md  sprint_19_cost_sensitivity.md  sprint_20_factor_decomp.md  sprint_21_walkforward_honest.md  sprint_22_bears_complete.md
market_analysis_package/sprints/: ROADMAP.md  sprint_18_metricas.md  sprint_19_custos.md  sprint_20_decomposicao.md  sprint_21_walkforward.md  sprint_22_bears_extras.md  sprint_23_audit_log.md  sprint_24_killswitch.md  sprint_25_sqlite.md  sprint_26_ci.md  sprint_27_fundacao_ui.md  sprint_28_replay.md  sprint_29_charts.md  sprint_30_historico.md  sprint_31_relatorios.md  sprint_32_live.md  sprint_33_packaging.md
prompts/: PROMPTS_SPRINT_18.md
scenarios/: bears_v2.yaml
scripts/: bear_market_validation.py  bear_market_validation_v2.py  bench_partial_exit.py  bench_time_filter.py  compare_walkforward_methods.py  cost_sensitivity.py  expected_return_analysis.py  factor_decomposition.py  fetch_real_data.py  hybrid_strategy.py  oos_final.py  optimize_optuna.py  portfolio_sprint13.py  rerun_bear_validation_dual_mdd.py  sprint13_robustness.py  walk_forward_real.py  walk_forward_sprint1.py  walk_forward_sprint4.py
templates/: index.html
tests/unit/: test_api.py  test_app.py  test_backtester.py  test_bear_validation.py  test_chandelier.py  test_cost_sensitivity.py  test_data.py  test_dsr_cooldown.py  test_ensemble_signals.py  test_factor_decomposition.py  test_fibonacci.py  test_indicators.py  test_macro_direction.py  test_meta_integration.py  test_meta_labeler.py  test_metrics.py  test_microstructure.py  test_optimizer.py  test_paper_trader.py  test_partial_breakeven.py  test_regime_detection.py  test_sprint6.py  test_strategy.py  test_stress_test.py  test_time_filter.py  test_triple_barrier.py  test_vol_targeting.py  test_walkforward_honest.py
